--- a/gateway/package.json
+++ b/gateway/package.json
@@ -15,7 +15,9 @@
     "apollo-server-express": "^3.6.7",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "graphql": "^16.3.0"
+    "express-jwt": "^6.1.1",
+    "graphql": "^16.3.0",
+    "jwks-rsa": "^2.0.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
