Get real account date from Auth0.

--- a/accounts/package.json
+++ b/accounts/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/subgraph": "^2.0.0-preview.12",
     "apollo-server": "^3.6.7",
+    "auth0": "^2.40.0",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "request": "^2.88.2"
