--- a/accounts/package.json
+++ b/accounts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marked-accounts",
   "version": "1.0.0",
-  "description": "",
+  "description": "The server for the accounts service in the Marked app.",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
