--- a/shared/package.json
+++ b/shared/package.json
@@ -8,8 +8,10 @@
   "author": "mandiwise",
   "license": "MIT",
   "dependencies": {
+    "@graphql-tools/utils": "^8.6.7",
     "apollo-server": "^3.6.7",
     "graphql": "^16.3.0",
+    "lodash-es": "^4.17.21",
     "validator": "^13.7.0"
   }
 }
