--- a/gateway/package.json
+++ b/gateway/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
     "graphql": "^16.3.0",
+    "graphql-depth-limit": "^1.1.0",
     "jwks-rsa": "^2.0.5"
   },
   "devDependencies": {
