--- a/profiles/package.json
+++ b/profiles/package.json
@@ -14,6 +14,7 @@
     "@apollo/subgraph": "^2.0.1",
     "apollo-datasource": "^3.3.1",
     "apollo-server": "^3.6.7",
+    "dataloader": "^2.1.0",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "mongoose": "^6.3.0"
