--- a/workflows/package.json
+++ b/workflows/package.json
@@ -11,6 +11,7 @@
   "author": "mandiwise",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.6.1",
     "@apollo/subgraph": "^2.0.1",
     "apollo-datasource": "^3.3.1",
     "apollo-server": "^3.6.7",
@@ -18,7 +19,8 @@
     "graphql": "^16.3.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.0",
-    "node-fetch": "^3.2.4"
+    "node-fetch": "^3.2.4",
+    "temporalio": "^0.21.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
