--- a/router/docker-compose.yaml
+++ b/router/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   apollo-router:
-    image: ghcr.io/apollographql/router:v0.1.0-preview.7
+    image: ghcr.io/apollographql/router:v0.9.0-rc.0
     container_name: apollo-router
     env_file:
       - ./.env
