--- a/router/docker-compose.yaml
+++ b/router/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   apollo-router:
-    image: ghcr.io/apollographql/router:v0.9.0-rc.0
+    image: ghcr.io/apollographql/router:v0.9.2
     container_name: apollo-router
     env_file:
       - ./.env
